--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@twistezo/react-text-scramble": "^1.0.6",
+    "aos": "^2.3.4",
     "chartjs": "^0.3.24",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fade-in": "^2.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
+    "react-spring": "^9.1.2",
     "styled-components": "^5.3.0",
     "typewriter-effect": "^2.17.0",
     "vanta": "^0.5.21",
